# unit_struct_repro

./: Cargo.toml
src/: main.rs
