[package]
name = "minirepro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_unit_struct = { path = "./serde_unit_struct/serde_unit_struct" }
serde_unit_struct_derive = { path = "./serde_unit_struct/serde_unit_struct_derive" }
toml = { version = "0.7.8", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
